--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 title: My website
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Everything. is. here.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -21,10 +21,8 @@ description: A virtual proof that I'm awesome
 # List of links in the navigation bar
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
-    - Learn markdown: "http://www.markdowntutorial.com/"
-  Author's home: "http://deanattali.com"
+  Blog: "blog"
+  cv: "cv"
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
@@ -68,10 +66,10 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
   rss: true
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "c.sohini@columbia.edu"
+ # facebook: 
+  github: sohinichatt
+  twitter: popeyed
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
