--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ avatar: "/img/avatar-icon.png"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
-# title-img: /path/to/image
+title-img: /path/to/IMG-5096.jpg
 
 # --- Background colour/image options --- #
 
