--- a/_config.yml
+++ b/_config.yml
@@ -23,10 +23,10 @@ navbar-links:
   About Me: "aboutme"
   Blog: "blog"
   cv: "cv"
-navbar-img: "cover image.jpg"
+
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-avatar: "/img/avatar-icon.png"
+avatar: "/img/self.jpg"
 
 # If you want to have an image logo in the top-left corner instead of the title text,
 # then specify the following parameter
