--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,18 @@ description: Everything. is. here.
 #baseurl: ""
 
 # --- Navigation bar options --- #
+navbar-links:
+  About Me: "aboutme"
+  Blog: "blog"
+  cv: "cv"
 
+# Image to show in the navigation bar - image must be a square (width = height)
+# Remove this parameter if you don't want an image in the navbar
+avatar: "/img/avatar-icon.png"
+
+# If you want to have an image logo in the top-left corner instead of the title text,
+# then specify the following parameter
+# title-img: /path/to/image
 # --- Background colour/image options --- #
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
