--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-img: "/img/cover image.jpg"
+navbar-col: "/img/cover image.jpg"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
