--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ avatar: "/img/avatar-icon.png"
 
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
-navbar-col: "/img/cover image.jpg"
+navbar-col: "#C39A9A"
 navbar-text-col: "#404040"
 navbar-children-col: "#F5F5F5"
 page-col: "#FFFFFF"
@@ -47,7 +47,7 @@ footer-link-col: "#404040"
 # instead of colour
 
 # footer-img: "/img/bgimage.png"
-# page-img: "/img/bgimage.png"
+# page-img: "/img/cover image.jpg"
 
 # --- Footer options --- #
 
