--- a/_config.yml
+++ b/_config.yml
@@ -34,9 +34,9 @@ avatar: "/img/avatar-icon.png"
 # Personalize the colors in your website. Colour values can be any valid CSS colour
 
 navbar-col: "#C39A9A"
-navbar-text-col: "#404040"
+navbar-text-col: "#F8EDED"
 navbar-children-col: "#F5F5F5"
-page-col: "#FFFFFF"
+page-col: "#cover image.png"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
