--- a/_config.yml
+++ b/_config.yml
@@ -47,7 +47,7 @@ footer-link-col: "#404040"
 # instead of colour
 
 # footer-img: "/img/bgimage.png"
-# page-img: "/img/cover image.jpg"
+page-img: "/img/cover image.jpg"
 
 # --- Footer options --- #
 
