--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ avatar: "/img/avatar-icon.png"
 navbar-col: "#C39A9A"
 navbar-text-col: "#F8EDED"
 navbar-children-col: "#F5F5F5"
-page-col: "#cover image.png"
+page-col: "#cover image.jpg"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
@@ -46,7 +46,7 @@ footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-# footer-img: "/img/bgimage.png"
+footer-img: "/img/cover image.png"
 page-img: "/img/cover image.jpg"
 
 # --- Footer options --- #
