reduced background image

--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ avatar: "/img/avatar-icon.png"
 navbar-col: "#C39A9A"
 navbar-text-col: "#F8EDED"
 navbar-children-col: "#F5F5F5"
-page-col: "#cover-image-compressed.jpg"
+page-col: "#cover-image-min.jpg"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
