--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: My website
+title: Bespectacled
 
 # Short description of your site
-description: Everything. is. here.
+description: Not there yet.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -36,6 +36,7 @@ navbar-col: "#C39A9A"
 navbar-text-col: "#F8EDED"
 navbar-children-col: "#F5F5F5"
 page-col: "#cover-image-min2.jpg"
+page-text-col: "#F2E5E5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#F5F5F5"
@@ -46,7 +47,7 @@ footer-link-col: "#404040"
 # instead of colour
 
 footer-img: "/img/cover image.png"
-page-img: "/img/cover-image-min2.jpg"
+page-img: "/img/cover image.jpg"
 
 # --- Footer options --- #
 
