--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: Bespectacled
+title: Home run.
 
 # Short description of your site
-description: Not there yet.
+description: historian in the unmaking.
 
 # --- Local development options ---
 # If your website is hosted locally rather than on GitHub, then you need to uncomment the next two parameters to set the url and baseurl
@@ -35,11 +35,11 @@ navbar-links:
 navbar-col: "#C39A9A"
 navbar-text-col: "#F8EDED"
 navbar-children-col: "#F5F5F5"
-page-col: "#cover-image-min2.jpg"
+page-col: "#DFEDEC"
 page-text-col: "#F2E5E5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#F5F5F5"
+footer-col: "#cover-image-min2.jpg"
 footer-text-col: "#777777"
 footer-link-col: "#404040"
 
@@ -47,7 +47,7 @@ footer-link-col: "#404040"
 # instead of colour
 
 footer-img: "/img/cover image.png"
-page-img: "/img/cover image.jpg"
+page-img: 
 
 # --- Footer options --- #
 
