--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: Home run.
+title: professional introspection
 
 # Short description of your site
 description: historian in the unmaking.
@@ -62,7 +62,7 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
  # rss: true
-email: "c.sohini@columbia.edu"
+email: "mail to:c.sohini@columbia.edu"
  # facebook: 
   github: sohini-c
   twitter: popeyed
