--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 # --- General options --- #
 
 # Name of website
-title: professional introspection
-
+title: Home run.
 # Short description of your site
 description: historian in the unmaking.
 
