--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # --- General options --- #
 
 # Name of website
-title: semi-professional musings
+title: home run
 
 # Short description of your site
-description: Historian in the unmaking
+description: historian in the unmaking
 
 
 # --- Local development options ---
@@ -56,7 +56,6 @@ page-img:
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Sohini
-  email: c.sohini@columbia.edu
 
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
@@ -64,7 +63,6 @@ author:
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
  # rss: true
-email: "mail to:c.sohini@columbia.edu"
  # facebook: 
   github: sohini-c
   twitter: popeyed
