--- a/_data/SocialNetworks.yml
+++ b/_data/SocialNetworks.yml
@@ -28,7 +28,7 @@ reddit:
 
 email:
   name: "Email me"
-  baseURL: "mailto:c.sohini@columbia.edu"
+  baseURL: "c.sohini@columbia.edu"
   icon: "fa-envelope"
 
 linkedin:
