--- a/_config.yml
+++ b/_config.yml
@@ -40,8 +40,8 @@ page-col: "#DFEDEC"
 page-text-col: "#F2E5E5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
-footer-col: "#img/cover-image-min2.jpg"
-footer-text-col: "#FFFFFF"
+footer-col: "#cover-image-min2.jpg"
+footer-text-col: "#008AFF"
 footer-link-col: "#008AFF"
 
 # Alternatively, the navbar, footer, and page background can be set to use background images
