--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,7 @@ description: historian in the unmaking
 #baseurl: ""
 
 # --- Navigation bar options --- #
+
 navbar-links:
   About Me: "aboutme"
   Abstracts: "abstracts"
@@ -41,28 +42,25 @@ page-text-col: "#F2E5E5"
 link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#cover-image-min2.jpg"
-footer-text-col: "#008AFF"
-footer-link-col: "#008AFF"
-
+footer-text-col: "#777777"
+footer-link-col: "#404040"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
-
-footer-img: "/img/cover-image-min2.jpg"
+footer-img: "/img/cover image.png"
 page-img: 
-
 # --- Footer options --- #
-
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
   name: Sohini
-
 # Select your active Social Network Links.
 # Uncomment the links you want to show in the footer and add your information to each link.
 # You can reorder the items to define the link order.
 # If you want to add a new link that isn't here, you'll need to also edit the file _data/SocialNetworks.yml
 social-network-links:
- # rss: true
+  rss: true
+  email: "c.sohini@columbia.edu"
+ # email: "c.sohini@columbia.edu"
  # facebook: 
   github: sohini-c
   twitter: popeyed
