--- a/_config.yml
+++ b/_config.yml
@@ -43,10 +43,11 @@ link-col: "#008AFF"
 hover-col: "#0085A1"
 footer-col: "#cover-image-min2.jpg"
 footer-text-col: "#777777"
-footer-link-col: "#404040"
+footer-link-col: "#000000"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
-footer-img: "/img/cover image.png"
+
+footer-img: 
 page-img: 
 # --- Footer options --- #
 # Change all these values or delete the ones you don't want.
