--- a/_config.yml
+++ b/_config.yml
@@ -47,8 +47,7 @@ footer-link-col: "#000000"
 # Alternatively, the navbar, footer, and page background can be set to use background images
 # instead of colour
 
-footer-img: img/cover_image-min2.jpg
-
+footer-img: "/img/cover image.png"
 page-img: 
 # --- Footer options --- #
 # Change all these values or delete the ones you don't want.
