--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,7 @@ description: historian in the unmaking
 
 navbar-links:
   About Me: "aboutme"
+  Writings: "writings"
   Abstracts: "abstracts"
   cv: "cv"
 
